<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/complete_layout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/include_toolbar"></include>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/botones"
                android:textSize="@dimen/text_size_titles"
                android:text="@string/title_completa_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="number"
                android:id="@+id/txt_celular"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/hitncelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/txt_email"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/hintEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="textPassword"
                android:id="@+id/txt_contrasena"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/hintContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="textPassword"
                android:id="@+id/txt_confirm_contrasena"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/hintConfirmaContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_termina_registro"
                android:layout_marginTop="30dp"
                android:text="Terminar"
                android:background="@color/botones"
                android:textColor="@color/fuentebotones"
                android:layout_gravity="center"
                android:layout_width="@dimen/AnchoBoton"
                android:layout_height="@dimen/altoBoton" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>